content/terraform-policy/v1.0.x/docs/policy/write/inputs-and-locals.mdx
---
page_title: Inputs variables and local values
description: >-
  Reference for locals and input blocks in Terraform Policy.
---

# Input variables and local values

Input variables and local values in Terraform policy work similarly to those in Terraform itself. Use input variables to parameterize your policies, and local values to provide re-usable semantic names for values within your policies.

## The `input {}` block

Terraform policy supports optional `input` blocks. These blocks behave like `var` blocks within Terraform, allowing you to parametrize your policies.

Declare and reference input blocks in your policies:

```hcl
input "example_variable" {
  type        = array
  description = "An example variable"
  default     = "example"
  sensitive   = false
}

resource_policy "aws_instance" "example_with_inputs" {
  enforce {
    condition = attrs.name == input.example
  }
}
```

FIXME: Complete explanation of the ways you can set inputs.

If an environment variable and a policy set parameter happen to have the same name/key, the policy set parameter takes precedence.

## The `locals {}` block

Terraform policy supports optional `locals` blocks. These blocks behave like `locals` blocks within Terraform configuration language, allowing you to share data with useful names between blocks. You can include a locals block as a top-level block, in which case those values will be available to all of the policies you include in your configuration. You can also include a locals block nested within any policy block, in which case those local values will only be scoped to that policy.

## Examples

The following examples demonstrate input and locals blocks in policies.

### Input variables

#FIXME

### Local values

```hcl
locals {
  version_constraint = core::semverconstraint(meta.version, "<= 5.0.0")
}

provider_policy "aws" "standard_configuration" {
  enforce {
    condition     = meta.source == "hashicorp/aws"
    error_message = "Only the official HashiCorp AWS provider is permitted."
  }

  enforce {
    condition     = local.version_constraint
    error_message = "The AWS provider version must be at least 5.0.0."
  }
}
```

### Policy-scoped local values

```hcl
resource_policy "aws_cloudtrail" "must_be_private" {
  locals {
    s3_bucket_acl = core::getresources("aws_s3_bucket_acl", {
      bucket = attrs.s3_bucket_name
    })
  }
  
  enforce {
    condition     = local.s3_bucket_acl[0].acl == "private"
    error_message = "S3 bucket associated with CloudTrail is not private"
  }
}
```
